# ds-monorepo

./: .gitignore  Makefile  README.md  pyproject.toml
lilac/core/: blocks.py  factory_base.py  utils.py
lilac/director/: cli.py  experiment_director.py
lilac/ensemble/: ensemble_runner_base.py  ensemble_runner_factory.py  stacking_runner.py
lilac/evaluators/: evaluator_base.py  evaluator_factory.py
lilac/experiment/: config.py  experiment.py
lilac/features/: features_aggregator.py  generator_base.py  generator_factory.py
lilac/jobs/: job_base.py  job_factory.py
lilac/models/: consts.py  model_base.py  model_factory.py
lilac/trainers/: basic_trainer.py  down_sampling_bagging_trainer.py  trainer_base.py  trainer_factory.py
lilac/validators/: cross_validation_runner.py  folds_generator_factory.py  folds_generators.py
projects/airbnb/: blocks_runner.py  create_sub.py  ensemble.ipynb  run_from_yaml.py  seed_job.py  test.ipynb
projects/airbnb_dynamic_pricing/: README.md  blocks_runner.py  config.yml  ensemble.ipynb  main.ipynb  main.py  run_from_yaml.py  seed_job.py  test.ipynb
projects/house_price/: create_sub.py  eda.ipynb  hello.py  process_v1.py  process_v2.py  process_v3.py  process_v4.py  process_v5.py  process_v6.py  process_v7.py  submit.ipynb  transfer_features.py
projects/prob_ac/: bert.ipynb  create_sub.py  eda.ipynb  keyword_year.ipynb
projects/prob_vegetable/: main.ipynb
projects/sony/: calc_corr.py  create_sub.py  create_v1.py  create_v2.py  create_v3.py  create_v4.py  eda.ipynb  list_scores.py  score_detail.py
tools/core/: blocks.py  data.py  factory_base.py  utils.py
tools/jobs/: job_base.py  (+1 more)
(+224 files in other folders)
