[tool.poetry]
name = "dynamic-pricing-prob"
version = "0.1.0"
description = ""
authors = ["habroptilus <x7deed53bc9k8@softbank.ne.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "57.0.0"
pandas = "^1.4.1"
lightgbm = "^3.3.2"
catboost = "^1.0.4"
imblearn = "^0.0"
ipykernel = "^6.10.0"
category-encoders = "^2.4.0"
pyarrow = "^7.0.0"
geopy = "^2.2.0"
matplotlib-venn = "^0.11.6"
seaborn = "^0.11.2"
torch = "^1.11.0"
transformers = "^4.17.0"
xfeat = "^0.1.1"
bhtsne = "^0.1.9"
umap-learn = "^0.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
